--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
       <table align="center" border="1" bgcolor="orange">
       <tr>
-            <th><a href=https://oilfieldtools.github.io/cableprotector/><img src="./arrowlogo.png" alt="LOGO sucker rod sucker-rod couplings joint petroleum oilfield services oilfield equipments"></a></th>
+            <th><a href=https://oilfieldtools.github.io/cableprotector/><img src="./arrowlogo.png" alt="LOGO inside bop|sucker rod|sucker-rod|couplings joint|petroleum oilfield services|oilfield equipments"></a></th>
             <th><a href=https://oilfieldtools.github.io/cableprotector style='color:mediumblue; text-decoration:none'><h1>Arrow Machinery Equipment Co., Ltd</h1></a></th>
       </tr>     
       </table>
@@ -16,12 +16,13 @@
       <h3 align="center"><p>Am Frank Chen! Welcome to inquire!</p></h3>
       <!--以上是简介-->
       <table align="center" style="font-size:30px;color:white" border="2" bgcolor="blue"  width="1360" height=“65”>
-      <tr>           
+      <tr bgcolor="greenyellow">           
         <th><a href=https://oilfieldtools.github.io/cableprotector/ style='color:white;text-decoration:none'>HOME</a></th>
         <th><a href=https://oilfieldtools.github.io/cableprotector/ style='color:white;text-decoration:none'>About US</a></th>
         <!--以下是产品菜单-->
         <th><select name="pageselect" onchange="self.location.href=options[selectedIndex].value" 
-                    style='font-size:40px;text-align:center;background:blue;color:white;border:none'>
+                    style='font-size:40px;text-align:center;background:greenyellow;color:white;border:none'>
+              <option value='https://oilfieldtools.github.io/insidebop'>Inside Bop</option>
               <option value='https://oilfieldtools.github.io/suckerrod'>sucker rod</option>
               <option value='https://oilfieldtools.github.io/cuttingtools'>Cutting Tools</option>
               <option value='https://oilfieldtools.github.io/drillpipe'>Drill Pipe</option>
@@ -40,9 +41,9 @@
       <!--以上是菜单-->
      <table align="center" border="1" bgcolor="yellow">
       <tr>
-        <th><a href=https://www.facebook.com/jason.liu.497933/><img src="./fb.png" alt="torque ring" width="60" height="60" 
+        <th><a href=https://www.facebook.com/jason.liu.497933/><img src="./fb.png" alt="inside bop|torque ring" width="60" height="60" 
          alt="oilfield equipment torque ring petroleum drilling rig"></a></th>
-        <th><a href=https://www.facebook.com/jason.liu.497933/><img src="./foxmaillogo.png" alt="torque ring" width="80" height="56" 
+        <th><a href=https://www.facebook.com/jason.liu.497933/><img src="./foxmaillogo.png" alt="inside bop|torque ring" width="80" height="56" 
          alt="oilfield equipment torque ring petroleum drilling rig"></a></th>
         <th><a href="mailto:frank0121@foxmail.com" style='text-decoration:none'>frank0121@foxmail.com</a></th>
         <th><a href=https://www.facebook.com/jason.liu.497933/><img src="./Gmaillogo.jpg" alt="torque ring" width="60" height="60" 
@@ -53,21 +54,17 @@
     <!--以上是联系方式-->
    <div align="center">
       <a href="https://oilfieldtools.github.io/torquering"><img src="./banner.png" width="1860" height="465" 
-         alt="sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--横幅-->
-      <a href="https://oilfieldtools.github.io/torquering"><img src="./stock.jpg" width="1500" height="620" 
-         alt="sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--库存-->
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./sucker-rod.jpg" width="1500" height="1686" 
-         alt="sucker rods specifications|oilfield equipment|couplings|sucker-rod|petroleum|drilling|rig"></a> <!--抽油杆规格-->
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./sucker rod details.jpg" width="1500" height="843" 
-         alt="sucker rod details|coupling|joint|petroleum|sucker-rod|polished rod|oil|drilling|rig "></a> 
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./test.jpg" width="1500" height="620" 
-         alt="oilfield equipment"></a>
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./production.jpg" width="1500" height="620" 
-         alt="oilfield equipment|petroleum|oil|sucker-rod"></a>
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./transport.jpg" width="1500" height="620" 
-         alt="oilfield equipment|drilling|rig|sucker rod"></a>
-         <a href=https://oilfieldtools.github.io/cableprotector/><img src="./workshop.jpg" width="1500" height="620" 
-         alt="oilfield equipment|drilling|rig|sucker rod"></a>
+         alt="sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--banner-->
+      <a href="https://oilfieldtools.github.io/torquering"><img src="./insidebop1.png" width="1500" height="2165" 
+         alt="inside bop|sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--inside bop img1-->
+      <a href="https://oilfieldtools.github.io/torquering"><img src="./insidebop2.png" width="1500" height="560" 
+         alt="inside bop|sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--inside bop img2-->
+      <a href="https://oilfieldtools.github.io/torquering"><img src="./insidebop3.png" width="1500" height="1200" 
+         alt="inside bop|sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--inside bop img3-->
+      <a href="https://oilfieldtools.github.io/torquering"><img src="./insidebop4.png" width="1500" height="990" 
+         alt="inside bop|sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--inside bop img4-->
+      <a href="https://oilfieldtools.github.io/torquering"><img src="./insidebop5.png" width="1500" height="1439" 
+         alt="inside bop|sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--inside bop img5-->     
    </div>
       <!--以上是正文-->
 </body>
