--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     style='font-size:40px;text-align:center;background:greenyellow;color:white;border:none'>
               <option value='https://oilfieldtools.github.io/insidebop'>Inside Bop</option>
               <option value='https://oilfieldtools.github.io/suckerrod'>sucker rod</option>
-              <option value='https://oilfieldtools.github.io/cuttingtools'>Cutting Tools</option>
-              <option value='https://oilfieldtools.github.io/drillpipe'>Drill Pipe</option>
-              <option value='https://oilfieldtools.github.io/torquering'>Torque Ring</option>
-              <option value='https://oilfieldtools.github.io/fishingtools'>Fishing Tools</option>
-              <option value=' https://oilfieldtools.github.io/oilfieldfishingmagnet'>Fishing Magnet</option>
-              <option value='https://oilfieldtools.github.io/junkmill'>Junk Mill</option>
-              <option value='https://oilfieldtools.github.io/cableprotector/'>Cable Protector</option>
+              <option value='https://oilfieldtools.github.io/drillbypassvaleve'>Drill By Pass Valve</option>
+              <option value='https://oilfieldtools.github.io/cuptester'>Cutp Tester</option>
+              <option value='https://oilfieldtools.github.io/float valve'>Float Valve</option>
+              <option value='https://oilfieldtools.github.io/kellyvalve'>Kelly Valve</option>
+              <option value=' https://oilfieldtools.github.io/dropincheckvalve'>Check Valve</option>
+              <option value='https://oilfieldtools.github.io/drillingsafetyvalve'>Safety Valve</option>
+              <option value='https://oilfieldtools.github.io/backpressurevalve'>BPV</option>
               <option value ='https://oilfieldtools.github.io/insulationjoint'>Insulation Joint</option>
           </select></th>
           <!--以上是产品菜单-->
@@ -54,7 +54,7 @@
     <!--以上是联系方式-->
    <div align="center">
       <a href="https://oilfieldtools.github.io/torquering"><img src="./banner.png" width="1860" height="465" 
-         alt="sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--banner-->
+         alt="sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--banner for inside bop-->
       <a href="https://oilfieldtools.github.io/torquering"><img src="./insidebop1.png" width="1500" height="2165" 
          alt="inside bop|sucker rod|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--inside bop img1-->
       <a href="https://oilfieldtools.github.io/torquering"><img src="./insidebop2.png" width="1500" height="560" 
